--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
